# srvtop

./: Cargo.toml  LICENSE  PLAN.md  README.md  SRS.md
.github/workflows/: ci.yml
src/: app.rs  event.rs  filter.rs  main.rs  scanner.rs  ui.rs  update.rs
